# DRL-robot-navigation-IR-SIM

./: .gitignore  README.md  pyproject.toml
robot_nav/: eval_points.yaml  eval_world.yaml  replay_buffer.py  robot_world.yaml  sim.py  test.py  test_rnn.py  train.py  train_rnn.py  utils.py
robot_nav/models/CNNTD3/: CNNTD3.py
robot_nav/models/DDPG/: DDPG.py
robot_nav/models/HCM/: hardcoded_model.py
robot_nav/models/PPO/: PPO.py
robot_nav/models/RCPG/: RCPG.py
robot_nav/models/SAC/: SAC.py  SAC_actor.py
robot_nav/models/TD3/: TD3.py
robot_nav/robot_nav/: eval_world.yaml  rollout_buffer.py  sim.py  train.py
robot_nav/robot_nav/models/PPO/: PPO.py
robot_nav/robot_nav/models/SAC/: SAC_critic.py  SAC_utils.py
robot_nav/robot_nav/models/TD3/: TD3.py
robot_nav/tests/: test_utils.py  test_world.yaml
tests/: test_model.py  test_sim.py  test_utils.py
