[project]
name = "robot-nav"
version = "0.1.0"
description = ""
authors = [
    {name = "reinis",email = "ireinisi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ir-sim[all] (>=2.3.0,<3.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
